; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeQueryImpl.c_setGroupResultForKey.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_vnodeQueryImpl.c_setGroupResultForKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32* }

@TSDB_CODE_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i8*, i32, i8*)* @setGroupResultForKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setGroupResultForKey(%struct.TYPE_5__* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32**, align 8
  %13 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32* null, i32** %10, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = call i64 @isNull(i8* %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %78

19:                                               ; preds = %4
  store i32 0, i32* %11, align 4
  %20 = load i32, i32* %8, align 4
  switch i32 %20, label %31 [
    i32 128, label %21
    i32 131, label %24
    i32 129, label %27
    i32 130, label %30
  ]

21:                                               ; preds = %19
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @GET_INT8_VAL(i8* %22)
  store i32 %23, i32* %11, align 4
  br label %34

24:                                               ; preds = %19
  %25 = load i8*, i8** %7, align 8
  %26 = call i32 @GET_INT64_VAL(i8* %25)
  store i32 %26, i32* %11, align 4
  br label %34

27:                                               ; preds = %19
  %28 = load i8*, i8** %7, align 8
  %29 = call i32 @GET_INT16_VAL(i8* %28)
  store i32 %29, i32* %11, align 4
  br label %34

30:                                               ; preds = %19
  br label %31

31:                                               ; preds = %19, %30
  %32 = load i8*, i8** %7, align 8
  %33 = call i32 @GET_INT32_VAL(i8* %32)
  store i32 %33, i32* %11, align 4
  br label %34

34:                                               ; preds = %31, %27, %24, %21
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* %11, align 4
  %39 = call i64 @taosGetIntHashData(i32 %37, i32 %38)
  %40 = inttoptr i64 %39 to i32**
  store i32** %40, i32*** %12, align 8
  %41 = load i32**, i32*** %12, align 8
  %42 = icmp ne i32** %41, null
  br i1 %42, label %43, label %46

43:                                               ; preds = %34
  %44 = load i32**, i32*** %12, align 8
  %45 = load i32*, i32** %44, align 8
  store i32* %45, i32** %10, align 8
  br label %71

46:                                               ; preds = %34
  %47 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 8
  %50 = icmp sge i32 %49, 10000
  br i1 %50, label %51, label %52

51:                                               ; preds = %46
  store i32 -1, i32* %5, align 4
  br label %78

52:                                               ; preds = %46
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 2
  %55 = load i32*, i32** %54, align 8
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %57 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 8
  %59 = add nsw i32 %58, 1
  store i32 %59, i32* %57, align 8
  %60 = sext i32 %58 to i64
  %61 = getelementptr inbounds i32, i32* %55, i64 %60
  %62 = bitcast i32* %61 to i8*
  store i8* %62, i8** %13, align 8
  %63 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %63, i32 0, i32 1
  %65 = load i32, i32* %64, align 4
  %66 = load i32, i32* %11, align 4
  %67 = bitcast i8** %13 to i8*
  %68 = call i64 @taosAddIntHash(i32 %65, i32 %66, i8* %67)
  %69 = inttoptr i64 %68 to i32**
  %70 = load i32*, i32** %69, align 8
  store i32* %70, i32** %10, align 8
  br label %71

71:                                               ; preds = %52, %43
  %72 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %73 = load i32*, i32** %10, align 8
  %74 = call i32 @setGroupOutputBuffer(%struct.TYPE_5__* %72, i32* %73)
  %75 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %76 = call i32 @initCtxOutputBuf(%struct.TYPE_5__* %75)
  %77 = load i32, i32* @TSDB_CODE_SUCCESS, align 4
  store i32 %77, i32* %5, align 4
  br label %78

78:                                               ; preds = %71, %51, %18
  %79 = load i32, i32* %5, align 4
  ret i32 %79
}

declare dso_local i64 @isNull(i8*, i32) #1

declare dso_local i32 @GET_INT8_VAL(i8*) #1

declare dso_local i32 @GET_INT64_VAL(i8*) #1

declare dso_local i32 @GET_INT16_VAL(i8*) #1

declare dso_local i32 @GET_INT32_VAL(i8*) #1

declare dso_local i64 @taosGetIntHashData(i32, i32) #1

declare dso_local i64 @taosAddIntHash(i32, i32, i8*) #1

declare dso_local i32 @setGroupOutputBuffer(%struct.TYPE_5__*, i32*) #1

declare dso_local i32 @initCtxOutputBuf(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
